<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EditStoreFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/common_spacing_default">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_hint_name"
            app:helperText="@string/required_input"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/max_store_name_chars"
            app:startIconDrawable="@drawable/ic_store"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLength="@integer/max_store_name_chars"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing_default"
            android:hint="@string/input_hint_phone"
            app:helperText="@string/required_input"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/max_phone_digits"
            app:startIconDrawable="@drawable/ic_phone"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLength="@integer/max_phone_digits"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing_default"
            android:hint="@string/input_hint_website"
            app:startIconDrawable="@drawable/ic_link"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_website"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="@integer/lines_url_website"
                android:minLines="@integer/lines_url_website"
                android:inputType="textMultiLine"
                android:textColor="@color/link_color"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing_default"
            android:padding="@dimen/common_spacing_default"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_input_url_photo"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_spacing_default"
                android:hint="@string/input_hint_photo_url"
                app:helperText="@string/required_input"
                app:startIconDrawable="@drawable/ic_image_search"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_url_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="@integer/lines_photo_url"
                    android:minLines="@integer/lines_photo_url"
                    android:textColor="@color/link_color"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/image_photo"
                android:layout_width="@dimen/img_photo_thumb"
                android:layout_height="@dimen/img_photo_thumb"
                android:src="@drawable/ic_image"/>

        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>